--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #0A4A45;
+    color: #dfe6e6;
     font-weight: bold;
     transition: color 0.3s;
 }
